[gd_scene load_steps=18 format=3 uid="uid://bpycoct2nh8hv"]

[ext_resource type="Script" path="res://Popper/Popcorn/PopcornWorkspace.gd" id="1_106bp"]
[ext_resource type="PackedScene" uid="uid://en5brk4uudl7" path="res://Popper/Popcorn/PopcornMachine.tscn" id="2_y47kg"]
[ext_resource type="Texture2D" uid="uid://cnqylv21ba60t" path="res://Popper/Resources/Counter.tres" id="3_q4ys4"]
[ext_resource type="PackedScene" uid="uid://bfntv2qtg1oxd" path="res://Popper/Popcorn/Pumps.tscn" id="3_vwwmn"]
[ext_resource type="Texture2D" uid="uid://b4jgvqyfcv7s5" path="res://Popper/Resources/top_left_shelf_piece.tres" id="4_4jumb"]
[ext_resource type="Texture2D" uid="uid://bbc3c3dip7jce" path="res://Popper/Resources/top_right_shelf_piece.tres" id="6_tlelb"]
[ext_resource type="Texture2D" uid="uid://ba6mprih63tss" path="res://Popper/Resources/bottom_left_shelf_piece.tres" id="7_wev28"]
[ext_resource type="Texture2D" uid="uid://cukq53j5ogpry" path="res://Popper/Resources/bottom_center_shelf_piece.tres" id="8_qyn8b"]
[ext_resource type="Texture2D" uid="uid://c22biv2a05wjx" path="res://Popper/Resources/bottom_right_shelf_piece.tres" id="9_jwdsm"]
[ext_resource type="Texture2D" uid="uid://c4h3aipo0ok01" path="res://UI/LeftArrow.tres" id="10_bqqs2"]
[ext_resource type="Texture2D" uid="uid://ciy7oel6thya7" path="res://UI/RightArrow.tres" id="11_s7y7r"]

[sub_resource type="Animation" id="Animation_xtwl5"]
resource_name = "shift_to_machine"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopcornMachine:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-320, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PumpSide:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(320, 0)]
}

[sub_resource type="Animation" id="Animation_24x45"]
resource_name = "shift_to_pumps"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopcornMachine:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-320, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PumpSide:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(320, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e7qsr"]
_data = {
"shift_to_machine": SubResource("Animation_xtwl5"),
"shift_to_pumps": SubResource("Animation_24x45")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5v0ew"]
size = Vector2(21.75, 179)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5k5rg"]
size = Vector2(21, 172)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_va24w"]

[node name="PopcornWorkspace" type="Node2D"]
texture_filter = 1
script = ExtResource("1_106bp")

[node name="PopcornMachine" parent="." instance=ExtResource("2_y47kg")]
position = Vector2(-320, 0)

[node name="PumpSide" type="Node2D" parent="."]

[node name="Counter" type="Node2D" parent="PumpSide"]
position = Vector2(0, 72)

[node name="Counter" type="Sprite2D" parent="PumpSide/Counter"]
texture = ExtResource("3_q4ys4")
centered = false
offset = Vector2(-16, 0)

[node name="Shelf" type="Sprite2D" parent="PumpSide/Counter"]
position = Vector2(80, 0)
texture = ExtResource("4_4jumb")

[node name="Sprite2D" type="Sprite2D" parent="PumpSide/Counter/Shelf"]
texture = ExtResource("6_tlelb")
offset = Vector2(192, 0)

[node name="Sprite2D2" type="Sprite2D" parent="PumpSide/Counter/Shelf"]
texture = ExtResource("7_wev28")
offset = Vector2(-32, 64)

[node name="Sprite2D3" type="Sprite2D" parent="PumpSide/Counter/Shelf"]
position = Vector2(-0.703125, 0)
scale = Vector2(1.28906, 1)
texture = ExtResource("8_qyn8b")
offset = Vector2(50, 64)

[node name="Sprite2D5" type="Sprite2D" parent="PumpSide/Counter/Shelf"]
position = Vector2(31, -5)
scale = Vector2(1.28906, 0.953125)
texture = ExtResource("8_qyn8b")
offset = Vector2(50, 10)

[node name="Sprite2D4" type="Sprite2D" parent="PumpSide/Counter/Shelf"]
texture = ExtResource("9_jwdsm")
offset = Vector2(160, 64)

[node name="Pumps" parent="PumpSide" instance=ExtResource("3_vwwmn")]
position = Vector2(117, 57)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e7qsr")
}

[node name="ShiftWorkspace" type="Area2D" parent="."]

[node name="CollisionShapeLeft" type="CollisionShape2D" parent="ShiftWorkspace"]
position = Vector2(11.125, 92)
shape = SubResource("RectangleShape2D_5v0ew")

[node name="CollisionShapeRight" type="CollisionShape2D" parent="ShiftWorkspace"]
position = Vector2(309.5, 85)
shape = SubResource("RectangleShape2D_5k5rg")

[node name="Left" type="Area2D" parent="ShiftWorkspace"]
visible = false
position = Vector2(12, 80)

[node name="Sprite2D" type="Sprite2D" parent="ShiftWorkspace/Left"]
z_index = 1
texture = ExtResource("10_bqqs2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShiftWorkspace/Left"]
shape = SubResource("RectangleShape2D_va24w")

[node name="Right" type="Area2D" parent="ShiftWorkspace"]
visible = false
position = Vector2(308, 80)

[node name="Sprite2D" type="Sprite2D" parent="ShiftWorkspace/Right"]
z_index = 1
texture = ExtResource("11_s7y7r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShiftWorkspace/Right"]
shape = SubResource("RectangleShape2D_va24w")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="carry_over" from="PopcornMachine" to="." method="_on_popcorn_machine_carry_over"]
[connection signal="draw" from="PumpSide" to="." method="_on_draw"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="mouse_shape_entered" from="ShiftWorkspace" to="." method="_on_shift_workspace_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="ShiftWorkspace" to="." method="_on_shift_workspace_mouse_shape_exited"]
[connection signal="input_event" from="ShiftWorkspace/Left" to="." method="_on_left_input_event"]
[connection signal="mouse_entered" from="ShiftWorkspace/Left" to="." method="_mouse_entered"]
[connection signal="mouse_exited" from="ShiftWorkspace/Left" to="." method="_mouse_exited"]
[connection signal="input_event" from="ShiftWorkspace/Right" to="." method="_on_right_input_event"]
[connection signal="mouse_entered" from="ShiftWorkspace/Right" to="." method="_mouse_entered"]
[connection signal="mouse_exited" from="ShiftWorkspace/Right" to="." method="_mouse_exited"]
